# wp-post

./: .gitignore  README.md  cat.py  conf.py  create_post.py  docker-compose.yaml  edit_post.py  index.html  post.py  posts.py  pyproject.toml  requirements.ini  requirements.txt  tags.py
plugins/: mal.py
src/wpcli/: __main__.py  cat.py  conf.py  post.py  tag.py
src/wpcli/plugins/: cfimages.py  deepl.py  mal.py  tmdb.py  tvdb.py
